--- a/location-view/package.json
+++ b/location-view/package.json
@@ -7,10 +7,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tomtom-international/web-sdk-maps": "^6.25.0",
+    "bootstrap": "^5.3.3",
     "exif-js": "^2.3.0",
     "http-proxy-middleware": "^3.0.0",
     "proj4": "^2.11.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.3",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
@@ -38,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.4"
   }
 }
