--- a/timeline-plot-backend/package.json
+++ b/timeline-plot-backend/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "exif": "^0.6.0",
     "exit": "^0.1.2"
   }
