--- a/timeline-plot-backend/package.json
+++ b/timeline-plot-backend/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "cors": "^2.8.5",
     "exif": "^0.6.0",
     "exit": "^0.1.2"
   }
