--- a/timelinev2/package.json
+++ b/timelinev2/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.7.2",
     "exif-js": "^2.3.0",
     "leaflet": "^1.9.4",
+    "leaflet-polylinedecorator": "^1.6.0",
     "react": "^18.3.1",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
