--- a/timeline-plot-backend/package.json
+++ b/timeline-plot-backend/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "exif": "^0.6.0",
-    "exit": "^0.1.2"
+    "exit": "^0.1.2",
+    "react-datepicker": "^7.3.0"
   }
 }
