--- a/timeline-plot/package.json
+++ b/timeline-plot/package.json
@@ -10,6 +10,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.3",
     "react-calendar-timeline": "^0.28.0",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "react-vertical-timeline-component": "^3.6.0",
